(library
    (name falconn)
    (libraries bigarray)
    (cxx_flags -std=c++11 -march=native -O3 -I %{project_root}/../../falconn/external/eigen -I %{project_root}/../../falconn/external/simple-serializer -I %{project_root}/../../falconn/src/include -pthread -x c++ -g)
    (c_library_flags -lstdc++)
    (cxx_names falconn_stubs))
